ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-agent-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-agent-service
            port:
              number: 8000
